# aleph-alpha-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  converse_json.py  detection.py  docker-compose.yaml  improved_conversion.py  main.py  pyproject.toml  requirements.txt
app/: config.py  detection.py  main.py
ressources/: 2022-10-06 13-26-11.mkv
