[tool.poetry]
name = "aleph-alpha-fastapi"
version = "0.1.0"
description = ""
authors = ["Marc Fabian Mezger <marc.mezger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aleph_alpha_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
aleph-alpha-client = "^2.4.4"
python-dotenv = "^0.21.0"
timm = "^0.6.11"
transformers = "^4.23.1"
opencv-python = "^4.6.0.66"
python-multipart = "^0.0.5"
torch = "^1.12.1"
pandas = "^1.5.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
