[tool.poetry]
name = "aleph-alpha-fastapi"
version = "0.1.0"
description = ""
authors = ["Marc Fabian Mezger <marc.mezger@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
aleph-alpha-client = "^2.4.4"
python-dotenv = "^0.21.0"
timm = "^0.6.11"
transformers = "^4.23.1"
opencv-python = "^4.6.0.66"
python-multipart = "^0.0.5"
torch = "^1.12.1"
pandas = "^1.5.0"
pre-commit = "^2.20.0"
hydra-core = "^1.2.0"
pytorch-lightning = "^1.7.7"
braceexpand = "^0.1.7"
webdataset = "^0.2.26"
librosa = "^0.9.2"
sentencepiece = "^0.1.97"
cython = "^0.29.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
